--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,12 +32,19 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.0.0'
     implementation 'com.google.firebase:firebase-storage:19.0.1'
     testImplementation 'junit:junit:4.12'
+
+    implementation 'com.google.android.gms:play-services-auth:17.0.0'
+
+
+    implementation 'com.github.bumptech.glide:glide:4.3.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.3.1'
+
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.navigation:navigation-fragment:2.2.0-alpha03'
     implementation 'androidx.navigation:navigation-ui:2.2.0-alpha03'
 
-    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'de.hdodenhof:circleimageview:2.1.0'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.12'
     implementation 'androidx.cardview:cardview:1.0.0'
@@ -46,3 +53,4 @@ dependencies {
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
 }
+apply plugin: 'com.google.gms.google-services'
