--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,12 @@ buildscript {
     repositories {
         google()
         jcenter()
+
         
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.0'
-        classpath 'com.google.gms:google-services:4.2.0'
+        classpath 'com.google.gms:google-services:4.3.2'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -19,7 +20,9 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        //add these two lines
+        mavenCentral()
+        maven { url 'https://maven.google.com' }
     }
 }
 
