--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,12 +10,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity
             android:name=".ReadersActivity"
             android:label="@string/title_activity_readers"
             android:theme="@style/AppTheme.NoActionBar" />
 
         <activity android:name=".ProfileActivity" />
+        <activity android:name=".guest" />
         <activity android:name=".RegisterActivity" />
         <activity
             android:name=".HomeActivity"
@@ -30,10 +32,18 @@
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name" />
+
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@mipmap/ic_launcher" />
+
         <service
-            android:name=".FirebaseMessagingService"
-            android:enabled="true"
-            android:exported="true"></service>
+            android:name=".Notification.MyFirebaseMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
 
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
